# duckdb-extension-clickhouse-sql

./: .gitmodules  README.md
.github/workflows/: MainDistributionPipeline.yml  main.yml
chsql/: CMakeLists.txt  extension_config.cmake  vcpkg.json
chsql/src/: chsql_extension.cpp  chsql_system.cpp  clickhouse_scan.cpp  duck_flock.cpp  parquet_ordered_scan.cpp  parquet_types.cpp
chsql/src/include/: chsql_parquet_types.h  chsql_system.hpp  clickhouse_scan.hpp
